# token-saver-action

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  strategies.md
examples/: basic_usage.py  openclaw_skill.md
mcp_server/: server.py
tests/: test_basic.py
token_saver/: __init__.py
token_saver/cli/: __init__.py  main.py
token_saver/core/: __init__.py  compressor.py  context_manager.py  token_counter.py
token_saver/integrations/: __init__.py
token_saver/integrations/openclaw/: SKILL.md  setup.sh
token_saver/strategies/: __init__.py  file_reader.py  history_pruner.py  output_controller.py  prompt_optimizer.py
